--- a/PCA.ipynb
+++ b/PCA.ipynb
@@ -232,7 +232,7 @@
     "\n",
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv(r\"C:\\\\Contents\\\\Kaggle\\\\Machine-Learning-for-Cybersecurity-Cookbook-master\\\\Machine-Learning-for-Cybersecurity-Cookbook-master\\\\Chapter01\\\\Standardizing Your Data\\\\file_pe_headers.csv\")\n",
+    "df = pd.read_csv(r\"C:\\\\Contents\\\\Kaggle\\\\file_pe_headers.csv\")\n",
     "\n",
     "df.head()\n",
     "\n"
