--- a/Markov Chain.ipynb
+++ b/Markov Chain.ipynb
@@ -73,7 +73,7 @@
     "\n",
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv(r\"C:\\\\Contents\\\\Kaggle\\\\Machine-Learning-for-Cybersecurity-Cookbook-master\\\\Machine-Learning-for-Cybersecurity-Cookbook-master\\\\Chapter01\\\\Generating Text using Markov Chains\\\\airport_reviews.csv\")\n",
+    "df = pd.read_csv(r\"C:\\\\Contents\\\\Kaggle\\\\airport_reviews.csv\")\n",
     "\n",
     "df.head()\n",
     "\n"
